--- a/accessing-data-neo4j/pom.xml
+++ b/accessing-data-neo4j/pom.xml
@@ -19,9 +19,14 @@
 	</properties>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-neo4j</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-ogm-core</artifactId>
 		</dependency>
 
 		<dependency>
