--- a/accessing-data-neo4j/src/main/resources/application.properties
+++ b/accessing-data-neo4j/src/main/resources/application.properties
@@ -2,3 +2,12 @@ spring.data.neo4j.uri= bolt://localhost:7687
 spring.data.neo4j.username=test
 spring.data.neo4j.password=test
 server.port=8083
+
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.database=0
+spring.redis.jedis.pool.max-active=50
+spring.redis.jedis.pool.max-wait=3000
+spring.redis.jedis.pool.max-idle=20
+spring.redis.jedis.pool.min-idle=2
+spring.redis.timeout=5000
