--- a/accessing-data-neo4j/src/main/resources/application.properties
+++ b/accessing-data-neo4j/src/main/resources/application.properties
@@ -11,3 +11,25 @@ spring.redis.jedis.pool.max-wait=3000
 spring.redis.jedis.pool.max-idle=20
 spring.redis.jedis.pool.min-idle=2
 spring.redis.timeout=5000
+
+
+
+spring.kafka.bootstrap-servers=http://localhost:9092
+spring.kafka.producer.retries=0
+spring.kafka.producer.acks=1
+spring.kafka.producer.batch-size=5120
+spring.kafka.producer.properties.linger.ms=0
+
+spring.kafka.producer.buffer-memory = 5242880
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.properties.group.id=defaultConsumerGroup
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto.commit.interval.ms=1000
+spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.consumer.properties.session.timeout.ms=120000
+spring.kafka.consumer.properties.request.timeout.ms=180000
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.listener.missing-topics-fatal=false
+
