--- a/accessing-data-neo4j/src/main/resources/application.properties
+++ b/accessing-data-neo4j/src/main/resources/application.properties
@@ -33,3 +33,5 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.listener.missing-topics-fatal=false
 
+kafka.topic.delayed-removal=delayed-removal
+
