--- a/accessing-data-neo4j/src/main/resources/application.properties
+++ b/accessing-data-neo4j/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.neo4j.uri= bolt://localhost:7687
-spring.data.neo4j.username=test
-spring.data.neo4j.password=test
+spring.data.neo4j.username=neo4j
+spring.data.neo4j.password=neo4jtest
 server.port=8083
 
 spring.redis.host=127.0.0.1
