--- a/accessing-data-neo4j/src/main/resources/application.properties
+++ b/accessing-data-neo4j/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.redis.timeout=5000
 
 
 
-spring.kafka.bootstrap-servers=http://34.134.107.121:9092
+spring.kafka.bootstrap-servers=http://localhost:9092
 spring.kafka.producer.retries=0
 spring.kafka.producer.acks=1
 spring.kafka.producer.batch-size=5120
